# OpenMeshMind

./: .gitignore  BASELINE_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  DECISION_LOG.md  GOVERNANCE.md  LICENSE  PILOT_DECISION_INTAKE_TEMPLATE.md  PILOT_GOVERNANCE.md  PILOT_NODE.md  PILOT_OPERATIONS.md  PROJECTS.md  PROVENANCE_TEMPLATE.md  README.md  RELEASE.md  ROADMAP.md  VERSIONING_POLICY.md  main_track_status.json  pyproject.toml
.github/: pull_request_template.md
data/: retrieval_corpus.json  retrieval_long_context_corpus.json  retrieval_long_context_queries.json  retrieval_queries.json
docs/: COMING_GOALS.md  CPU_ONLY_LLM_RESEARCH_BRIEF_2026-02-17.md  MVP_CRITERIA.md  MVP_DEFINITION_OF_DONE.md  MVP_TASK_BREAKDOWN.md  MVP_USER_VALUE_PLAN.md  NEXT_STEPS.md
experiments/: fedavg_adapter_intent.py  fedavg_classification_utility.py  fedavg_cpu_only.py  local_classification_baseline.py  local_retrieval_baseline.py
pilot/: COHORT_ONBOARDING_CHECKLIST.md  PILOT_14_DAY_RUNBOOK.md  VOLUNTEER_DATA_SUBMISSION.md  cohort_manifest.example.json  cohort_manifest.json  cohort_manifest.schema.v1.json  cohort_onboarding_summary.json  incident_log.example.json  incident_log.json  node_config.example.json  pilot_cohort_metrics.json
reports/: PILOT_14_DAY_REPORT_TEMPLATE.md  PILOT_STATUS_TEMPLATE.md  WEEKLY_STATUS_TEMPLATE.md  benchmark_suite_snapshot.md  fairness_capacity_simulation.md  fedavg_classification_fairness.md  fedavg_classification_utility.md  local_classification_baseline.md  local_retrieval_baseline.md  low_end_smoke_path.md  main_track_status.md  pilot_artifacts.tgz  (+4 more)
(+74 files in other folders)
